import { ClientOptions, Transport } from "@nestjs/microservices";
import { ConfigService } from "@nestjs/config";

const configService: ConfigService = new ConfigService();

export const grpcClientOptions: ClientOptions = {
  transport: Transport.GRPC,
  options: {
    package: [
      "assignedcontact",
      "org",
      "assignedsiteinspector",
      "project",
      "system",
      "assignedteammember",
      "assignedinstaller",
      "proposedutilitytariff",
      "privatefile",
      "currentutilitytariff",
      "modulemodel",
      "battery",
      "utilitytariff",
      "inverter",
      "event",
      "leadcaptureform",
      "othercomponent",
      "documenttemplate",
      "paymentoption",
      "publicfile",
      "rooftype",
      "incentive",
      "pricingscheme",
      "costing",
      "role",
      "contact",
      "orgsetting",
      "eventtype",
      "team",
      "setback",
      "designsetting",
      "componentactivation",
      "user"
    ],
    protoPath: [
      "src/assignedcontact/assignedcontact.proto",
      "src/org/org.proto",
      "src/assignedsiteinspector/assignedsiteinspector.proto",
      "src/project/project.proto",
      "src/system/system.proto",
      "src/assignedteammember/assignedteammember.proto",
      "src/assignedinstaller/assignedinstaller.proto",
      "src/proposedutilitytariff/proposedutilitytariff.proto",
      "src/privatefile/privatefile.proto",
      "src/currentutilitytariff/currentutilitytariff.proto",
      "src/modulemodel/modulemodel.proto",
      "src/battery/battery.proto",
      "src/utilitytariff/utilitytariff.proto",
      "src/inverter/inverter.proto",
      "src/event/event.proto",
      "src/leadcaptureform/leadcaptureform.proto",
      "src/othercomponent/othercomponent.proto",
      "src/documenttemplate/documenttemplate.proto",
      "src/paymentoption/paymentoption.proto",
      "src/publicfile/publicfile.proto",
      "src/rooftype/rooftype.proto",
      "src/incentive/incentive.proto",
      "src/pricingscheme/pricingscheme.proto",
      "src/costing/costing.proto",
      "src/role/role.proto",
      "src/contact/contact.proto",
      "src/orgsetting/orgsetting.proto",
      "src/eventtype/eventtype.proto",
      "src/team/team.proto",
      "src/setback/setback.proto",
      "src/designsetting/designsetting.proto",
      "src/componentactivation/componentactivation.proto",
      "src/user/user.proto"
    ],
    url: configService.get<string>("GRPC_CLIENT_URL_PATH"),
  },
};
